Bug 405973 - Volume bar in JuK resets to the maximum after closing
Summary: Volume bar in JuK resets to the maximum after closing
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.08.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-28 19:23 UTC by David
Modified: 2019-12-30 22:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David 2019-03-28 19:23:24 UTC
Steps to reproduce:
* Play some song in JuK
* Adjust the volume by clicking the sound icon and dragging the circle (or whatever the plasma theme shows) within that bar.
* Close JuK.
* Open JuK again.

Expected behavior: the volume bar should resume just where it was before closing it.

Actual behavior: the volume bar resets to the maximum, but the volume itself is the same as it was before. Trying to change it while listening to a song will however be a PITA as it will first have to go through the maximum volume downwards to the desired volume.
Comment 1 Patrick Silva 2019-04-27 17:43:16 UTC
juk 19.04 has the same bug on Arch Linux.
Comment 2 abogical 2019-12-30 22:48:06 UTC
Git commit 50559afaa50d1a2801e71f3d791e679ee80930a6 by Abdel-Rahman Abdel-Rahman.
Committed on 29/12/2019 at 16:14.
Pushed by mpyne into branch 'release/19.12'.

PlayerManager: Unify volume slots

slotVolumeChanged and setVolume should have the same effect but are
effectively different. One propagates the signal, and one sets the
actual volume. Both are used separately and thus the volume value
doesn't become synchronized throughout the application. This commit
unifies both functions into a single slot.

M  +3    -7    playermanager.cpp
M  +1    -2    playermanager.h
M  +1    -1    volumepopupbutton.cpp

https://invent.kde.org/kde/juk/commit/50559afaa50d1a2801e71f3d791e679ee80930a6