PlayerManager: Unify volume slots

slotVolumeChanged and setVolume should have the same effect but are
effectively different. One propagates the signal, and one sets the
actual volume. Both are used separately and thus the volume value
doesn't become synchronized throughout the application. This commit
unifies both functions into a single slot.

BUG: 405973